--- a/index.html
+++ b/index.html
@@ -47,6 +47,14 @@
 					</li>					
 				</ul>		
 			</div>
-		</nav>					
+		</nav>	
+		<div class="jumbotron">
+		    <h1 class="display-4">Front End UX Design</h1>
+		    <p class="lead">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+
+		    <p class="lead">
+			<a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
+		    </p>
+		</div>
 	</body>
 </html>
