--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 		    </p>
 		</div>
 		<div class="row">
-		    <div class="col">
+		    <div class="col-sm-4">
 			<div class="card">
 			    <div class="card-body text-center">
 				<h5 class="card-title">Card title</h5>
@@ -66,7 +66,7 @@
 			    </div>
 			</div>
 		    </div>
-		    <div class="col">
+		    <div class="col-sm-4">
 			<div class="card">
 			    <div class="card-body text-center">
 				<h5 class="card-title">Card title</h5>
@@ -75,7 +75,7 @@
 			    </div>
 			</div>
 		    </div>
-		    <div class="col">
+		    <div class="col-sm-4">
 			<div class="card">
 			    <div class="card-body text-center">
 				<h5 class="card-title">Card title</h5>
