--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 		<![endif]-->
 	</head>
 	<body>
-		<nav class="navbar navbar-expand-md navbar-dark bg-dark">
+		<nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
 			<a class="navbar-brand" href="#">Adam Pluth</a>
 			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 				<span class="navbar-toggler-icon"></span>
@@ -56,34 +56,46 @@
 			<a class="btn btn-primary btn-lg" href="#" role="button">Learn more</a>
 		    </p>
 		</div>
-		<div class="row">
-		    <div class="col-sm-4">
-			<div class="card">
-			    <div class="card-body text-center">
-				<h5 class="card-title">Card title</h5>
-				<p class="card-text">Some quick example text to build on the card title</p>
-				<a href="#" class="card-link">Another link</a>
-			    </div>
+		<section class="content-section" id="infocards">
+			<div class="row">
+				<div class="col-sm-4">
+				<div class="card">
+					<div class="card-body text-center">
+					<h5 class="card-title">Card title</h5>
+					<p class="card-text">Some quick example text to build on the card title</p>
+					<a href="#" class="card-link">Another link</a>
+					</div>
+				</div>
+				</div>
+				<div class="col-sm-4">
+				<div class="card">
+					<div class="card-body text-center">
+					<h5 class="card-title">Card title</h5>
+					<p class="card-text">Some quick example text to build on the card title</p>
+					<a href="#" class="card-link">Another link</a>
+					</div>
+				</div>
+				</div>
+				<div class="col-sm-4">
+				<div class="card">
+					<div class="card-body text-center">
+					<h5 class="card-title">Card title</h5>
+					<p class="card-text">Some quick example text to build on the card title</p>
+					<a href="#" class="card-link">Another link</a>
+					</div>
+				</div>
+				</div>
 			</div>
-		    </div>
-		    <div class="col-sm-4">
-			<div class="card">
-			    <div class="card-body text-center">
-				<h5 class="card-title">Card title</h5>
-				<p class="card-text">Some quick example text to build on the card title</p>
-				<a href="#" class="card-link">Another link</a>
-			    </div>
+		</section>
+		<section class="content-section" id="portfolio">
+			<div class="container">
+				
 			</div>
-		    </div>
-		    <div class="col-sm-4">
-			<div class="card">
-			    <div class="card-body text-center">
-				<h5 class="card-title">Card title</h5>
-				<p class="card-text">Some quick example text to build on the card title</p>
-				<a href="#" class="card-link">Another link</a>
-			    </div>
+		</section>
+		<footer class="footer">
+			<div class="container">
+			<span class="text-muted">Place sticky footer content here.</span>
 			</div>
-		    </div>
-		</div>		
+		</footer>
 	</body>
 </html>
