--- a/index.html
+++ b/index.html
@@ -89,7 +89,20 @@
 		</section>
 		<section class="content-section" id="portfolio">
 			<div class="container">
-				
+				<div class="row">
+					<a href="#" class="col-md-6 portfolio-item">
+						<h2>See project</h2>			
+					</a>
+					<a href="#" class="col-md-6 portfolio-item">
+						<h2>See project</h2>			
+					</a>					
+					<a href="#" class="col-md-6 portfolio-item">
+						<h2>See project</h2>			
+					</a>
+					<a href="#" class="col-md-6 portfolio-item">
+						<h2>See project</h2>			
+					</a>										
+				</div>
 			</div>
 		</section>
 		<footer class="footer">
